--- a/notebook/installetion.html
+++ b/notebook/installetion.html
@@ -48,4 +48,6 @@ Activate the pima python environment with
 conda activate pima 
 Then launch jupyter notebook with:
 jupyter notebook
-Note that the directory in which you run this command will be the rootdirectory in your jupyter notebook.  Keep this in mind when you arereading or writing data files!When you are done with Phy 80 for the session you can deactivate theenvironment with:conda deactivate
+Note that the directory in which you run this command will be the rootdirectory in your jupyter notebook.  
+Keep this in mind when you are reading or writing data files!
+When you are done with pima for the session you can deactivate the environment with: conda deactivate
