--- a/notebook/installation.html
+++ b/notebook/installation.html
@@ -8,7 +8,7 @@ If prompted, you should choose to:
 Once installed, check that you can run the "Anaconda Prompt".  
 From the prompt, run the command:conda --version
 
-Video to install miniconda on window
+Video to install miniconda on Windows
 https://www.youtube.com/watch?v=tXgPY4lc6fo
 
 --------------------------------------------
@@ -16,19 +16,19 @@ Installing Miniconda3 under Linux or macOS
 --------------------------------------------
 Download the appropriate installer for your OS here:https://docs.conda.io/en/latest/miniconda.html#
 For macOS, you can choose between a "package" or "bash" version. 
-I find it easier to follow the bash version, but the package versionwill work too. 
-I recommend you make the following choices describedbelow.
+I find it easier to follow the bash version, but the package version will work too. 
+I recommend you make the following choices described below.
 1)  Accept the license / terms of use.
-2)  Do not install for all users, but just one the current user.
-3)  You might be asked whether or not to allow the installer to issue"conda init".  
-Answering "no" will require you to activate condayourself each time you open a new terminal, 
-following the instructionsthat will be provided during installation.  
-Make sure you record theseinstructions if you choose "no".  
+2)  Do not install for all users, but just the current user.
+3)  You might be asked whether or not to allow the installer to issue "conda init".  
+Answering "no" will require you to activate conda yourself each time you open a new terminal, 
+following the instructions that will be provided during installation.  
+Make sure you record these instructions if you choose "no".  
 I recommend answering "yes".  This will set some environment variables persistently in 
-your shell so thatconda is setup every time you open a terminal.  
-I recommend "yes", andthe remaining instructions assume that you have done so.
+your shell so that conda is setup every time you open a terminal.  
+I recommend "yes", and the remaining instructions assume that you have done so.
 During the installation, take note of the installation location of miniconda in your log file.
-The default instalation should put conda here:  YOUR_HOME_DIRECTORY/opt/miniconda3/
+The default installation should put conda here:  YOUR_HOME_DIRECTORY/opt/miniconda3/
 
 ------------------------------------------
 Installing PIMA  Conda Environment
