add sep installation in the installation part

--- a/notebook/installation.html
+++ b/notebook/installation.html
@@ -46,6 +46,14 @@ Starting pima Conda Environment and Jupyter Notebook
 -------------------------------------------------------------
 Activate the pima python environment with 
 conda activate pima 
+
+now we need to install last package: sep
+
+there are two way:
+ - conda install -c conda-forge sep 
+or
+ - pip install sep
+
 Then launch jupyter notebook with:
 jupyter notebook
 Note that the directory in which you run this command will be the rootdirectory in your jupyter notebook.  
